--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Plan D'Action</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">    <title>Plan D'Action</title>
 </head>
 <body>
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="col-12 col-md-8 border rounded shadow p-5">
+            <h1>Gamers Form</h1>
+            <form id="submitNewGamer">
+                <label for="First Name">First Name</label>
+                <input type="text" name="FirstName" class="form-control" id="FirstName">
+                <label for="Last Name">Last Name</label>
+                <input type="text" name="LastName" class="form-control" id="LastName">
+                <label for="Game">Game</label>
+                <input type="text" name="Game" class="form-control" id="Game">
+                <label for="Phone">Phone</label>
+                <input type="number" name="Phone" class="form-control" id="Phone">
+                <input type="submit" value="submit" class="mt-3 btn btn-outline-primary form-control">
+            </form>
+        </div>
+    </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
