--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <input type="text" name="Game" class="form-control" id="Game">
                 <label for="Phone">Phone</label>
                 <input type="number" name="Phone" class="form-control" id="Phone">
-                <input type="submit" value="submit" class="mt-3 btn btn-outline-primary form-control">
+                <input type="submit" id="submitBtn" value="submit" class="mt-3 btn btn-outline-primary form-control">
             </form>
         </div>
     </div>
