--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="col-12 col-md-8 border rounded shadow p-5">
-            <h1>Gamers Form</h1>
-            <form id="submitNewGamer">
-                <label for="First Name">First Name</label>
-                <input type="text" name="FirstName" class="form-control" id="FirstName">
-                <label for="Last Name">Last Name</label>
-                <input type="text" name="LastName" class="form-control" id="LastName">
-                <label for="Game">Game</label>
-                <input type="text" name="Game" class="form-control" id="Game">
-                <label for="Phone">Phone</label>
-                <input type="number" name="Phone" class="form-control" id="Phone">
-                <input type="submit" id="submitBtn" value="submit" class="mt-3 btn btn-outline-primary form-control">
-            </form>
+        <div class="row">
+            <div class="col-12 col-md-8 border rounded shadow p-5 w-100">
+                <h1>Gamers Form</h1>
+                <form id="submitNewGamer">
+                    <label for="First Name">First Name</label>
+                    <input type="text" name="FirstName" class="form-control" id="FirstName">
+                    <label for="Last Name">Last Name</label>
+                    <input type="text" name="LastName" class="form-control" id="LastName">
+                    <label for="Game">Game</label>
+                    <input type="text" name="Game" class="form-control" id="Game">
+                    <label for="Phone">Phone</label>
+                    <input type="number" name="Phone" class="form-control" id="Phone">
+                    <input type="submit" id="submitBtn" value="submit" class="mt-3 btn btn-outline-primary form-control">
+                </form>
+            </div>
+            <div class="col-12 col-md-8 border rounded mt-5 w-100 p-5" id="gamerListContainer">
+                <h2>Gamer List</h2>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
