--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="submit" id="submitBtn" value="submit" class="mt-3 btn btn-outline-primary form-control">
                 </form>
             </div>
-            <div class="col-12 col-md-8 border rounded mt-5 w-100 p-5" id="gamerListContainer">
+            <div class="col-12 col-md-8 d-flex flex-column gap-3 border rounded mt-5 w-100 p-5" id="gamerListContainer">
                 <h2>Gamer List</h2>
             </div>
         </div>
