--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     <input type="text" name="Game" class="form-control" id="Game">
                     <label for="Phone">Phone</label>
                     <input type="number" name="Phone" class="form-control" id="Phone">
-                    <input type="submit" value="submit" class="mt-3 btn btn-outline-primary form-control">
+                    <input type="submit" id="submitBtn" value="submit" class="mt-3 btn btn-outline-primary form-control">
+                    <button class="btn btn-outline-dark w-100 mt-3">Update</button>
                 </form>
             </div>
             <div class="col-12 col-md-8 d-flex flex-column gap-3 border rounded mt-5 w-100 p-5" id="gamerListContainer">
