`Added sorting functionality to gamer list`

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             </div>
             <div class="col-12 col-md-8 d-flex flex-column gap-3 border rounded mt-5 w-100 p-5" id="gamerListContainer">
                 <h2>Gamer List</h2>
+                <select name="" id="selectSort">
+                    <option selected disabled>Select A sorting way</option>
+                    <option value="">Game</option>
+                </select>
+                <div class="card p-4"></div>
             </div>
         </div>
     </div>
