--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
             <div class="col-12 col-md-8 d-flex flex-column gap-3 border rounded mt-5 w-100 p-5" id="gamerListContainer">
                 <h2>Gamer List</h2>
+                <input type="search" name="" class="form-control" id="searchPanel">
                 <select name="" id="selectSort">
                     <option selected disabled>Select A sorting way</option>
                     <option value="">Game</option>
